src/main/resources/Krakatau-master/tests/assembler/bad/widerawdefconflict.j
.class public whocares
.super java/lang/Object

.const [2] = Int 5
.const [1] = Long 4L
.end class
